TOUR-24 UI-Tournament

--- a/client/src/index.html
+++ b/client/src/index.html
@@ -21,7 +21,7 @@
 			crossorigin="anonymous" />
 	</head>
 	<body>
-		<app-root></app-root>
+		<app-root style="background-color: #415160"></app-root>
 
 		<script
 			src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
